crates/memtrack/tests/snapshots/stack_tests__nested_doubling.snap
---
source: crates/memtrack/tests/stack_tests.rs
expression: format_events(&events)
---
[
    "Malloc { size: 1024, has_stack: true }",
    "Malloc { size: 2048, has_stack: true }",
    "Malloc { size: 4096, has_stack: true }",
    "Free { has_stack: false }",
    "Free { has_stack: false }",
    "Free { has_stack: false }",
]
