crates/memtrack/tests/snapshots/stack_tests__nested_doubling_stack_capture_disabled.snap
---
source: crates/memtrack/tests/stack_tests.rs
expression: format_events(&events)
---
[
    "Malloc { size: 1024, has_stack: false }",
    "Malloc { size: 2048, has_stack: false }",
    "Malloc { size: 4096, has_stack: false }",
    "Free",
    "Free",
    "Free",
]
