crates/memtrack/tests/snapshots/stack_tests__stack_paths.snap
---
source: crates/memtrack/tests/stack_tests.rs
expression: format_events(&events)
---
[
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 64, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
    "Malloc { size: 192, has_stack: true }",
    "Free { has_stack: false }",
]
