crates/memtrack/tests/snapshots/stack_tests__stack_paths_stack_capture_disabled.snap
---
source: crates/memtrack/tests/stack_tests.rs
expression: format_events(&events)
---
[
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 64, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
    "Malloc { size: 192, has_stack: false }",
    "Free",
]
